# ThesisNieuw

./: BestScoresFinal.xlsx  Best_Scores_Datasets_ModelBased.xlsx  Best_Scores_Datasets_ModelBased2.xlsx  Best_Scores_Datasets_ModelBased_Final.xlsx  Datasets-KNN.xlsx  Datasets-SpectralClustering.xlsx  High_Score_Datasets_with_K.xlsx  High_Score_Datasets_with_K_Approx.xlsx  High_Score_Datasets_with_K_Approx_2per.xlsx  High_Score_Datasets_with_K_Approx_2per_BestK.xlsx  High_Score_Datasets_with_K_Approx_2per_BestK2.xlsx  High_Score_Datasets_with_K_Approx_2per_BestK2_witherror.xlsx  High_Score_Datasets_with_K_Updates1.xlsx  High_Score_Datasets_with_K_Updates3.xlsx  High_Score_Datasets_with_K_Updates_witherror.xlsx  High_Score_Datasets_with_K_Updates_witherror2.xlsx  High_Score_Datasets_with_K_Updates_witherror3.xlsx  High_Score_Datasets_with_K_Updates_witherror4.xlsx  clustering_results.xlsx  clustering_results_bigdata_CBF.xlsx  clustering_results_bigdata_Mallat.xlsx  clustering_results_bigdata_Symbols.xlsx  clustering_results_bigdata_TwoPatterns.xlsx  clustering_results_diag_finalRun2.xlsx  clustering_results_diag_test.xlsx  clustering_results_diag_test_final.xlsx  clustering_results_diag_test_final_001.xlsx  clustering_results_rook_finalRun.xlsx  clustering_results_rook_fixed_finalRun.xlsx  clustering_results_rook_fixed_finalRun_with_recon.xlsx  error_metrics_analysis.xlsx  results3.csv  results_KNN_good.csv
1-SpectralClustering_ACA_Components/: CMakeLists.txt  FastMult.py  LanczosFastMult.cpp  LanczosFastMult.py  fastMultWrapper.cpp  test.py
2-KNN_ACA_Naive/: KNN_Exact.py  (+3 more)
(+48 files in other folders)
